良さそうかと思ったけど逆回転する→絶対おかしい

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.pythonPath": "/Users/komatsu/opt/anaconda3/envs/py3.8/bin/python",
-    "python.dataScience.jupyterServerURI": "local"
+    "jupyter.jupyterServerType": "local"
 }
